--- a/static/end.html
+++ b/static/end.html
@@ -8,7 +8,9 @@
 	</head>
 	<body>
 		<div id="status">
-			<center><h1>Syncronizing data</h1></center>
+			<center>
+				<h1>Syncronizing data</h1>
+			</center>
 		</div>
 		<script>
 			fetch("/save", {
