--- a/static/twitch.html
+++ b/static/twitch.html
@@ -8,7 +8,9 @@
 	</head>
 	<body>
 		<div id="status">
-			<center><h1>Syncronizing twich data</h1></center>
+			<center>
+				<h1>Syncronizing twich data</h1>
+			</center>
 		</div>
 		<script>
 			const token = window.location.hash
